--- a/css/menuside.css
+++ b/css/menuside.css
@@ -33,3 +33,7 @@ body {
 			font-weight: bold; 
 			color: #032c55; 
 		}
+		.navbar-right {
+			float: right !important;
+			margin-right: 15px;
+		}
